Возможность настройки дополнительных сервисов проверки IP-адресов (#4)
* Исправлена опечатка в content_security_policy

* Можно добавлять дополнительные сервисы по проверке IP-адресов в параметрах плагина

* Актуализировано описание настройки параметров 

- Добавил описание возможности добавления дополнительных сервисов по проверке IP-адресов
- Добавил скриншоты

Signed-off-by: grikos <51186173+grikos@users.noreply.github.com>

---------

Signed-off-by: grikos <51186173+grikos@users.noreply.github.com>

--- a/options.css
+++ b/options.css
@@ -14,9 +14,50 @@
 
     
 body {
-    width:800px;
+    width:1600px;
 }
 
 input.inputfield {
    margin-left: 10px;
+}
+
+div.iplinks_container {
+    margin-top: 15px;
+}
+
+.iplink {
+    display: flex; 
+    flex-direction: row;
+  }
+  
+.iplink input {
+    display: block; 
+  }
+
+ .iplink_name {
+    width: 32em;
+    margin: 5px;
+} 
+
+.iplink_template {
+    width: 100em;
+    margin: 5px;
+}
+
+.iplink  label {
+    text-align: left;
+    display: inline-block;
+    margin-top: 0.5em;
+    font-weight: bold;
+}
+
+span.delete_row {
+    margin-top: 0.5em;
+    cursor: pointer;
+}
+
+.buttons {
+    width: 15em;
+    margin: 0 auto;
+    display: inline;
 }
