Переход к правилу нормализации в PTKB по клику на id

--- a/siemMonkey.css
+++ b/siemMonkey.css
@@ -64,6 +64,11 @@ div.mc-dt[title="external_link"] {
   cursor: pointer; 
 }
 
+div.mc-dt[title="id"] { 
+  color: red; 
+  cursor: pointer; 
+}
+
 div.mc-dt[title="task_id"] { 
   color: red; 
   cursor: pointer; 
